--- a/volunteer/public/index.html
+++ b/volunteer/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -17,6 +18,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css" rel="stylesheet"/>
 
+    <script src="https://www.paypal.com/sdk/js?client-id=test"></script>
+    <script>paypal.Buttons().render('body');</script>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -29,7 +33,11 @@
     <title>React App</title>
   </head>
   <body>
+    <script
+      src="https://www.paypal.com/sdk/js?client-id=AWiQjTNw4d3KOKZa6hoMRWx4Kj-vL1S9YQVFB-zW0jL1z87p0ZFloRQJAtfC-u0fNRjuTfcdjMIhnEPn"> // Required. Replace YOUR_CLIENT_ID with your sandbox client ID.
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
