--- a/volunteer/public/index.html
+++ b/volunteer/public/index.html
@@ -18,8 +18,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v2.2.0/mapbox-gl.css" rel="stylesheet"/>
 
-    <script src="https://www.paypal.com/sdk/js?client-id=test"></script>
-    <script>paypal.Buttons().render('body');</script>
+    <!--<script src="https://www.paypal.com/sdk/js?client-id=test"></script>
+    <script>paypal.Buttons().render('body');</script>-->
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
